# ProbOsWeek1

./: .gitignore  CMakeLists.txt  LICENSE  README.md  RunAll.sh  RunProbOS.ps1  RunTests.sh  check_ci.sh  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
cpp/: CMakeLists.txt
cpp/include/distributions/: normal.hpp
cpp/include/kernel/: battery_cell.hpp  monte_carlo_omp.hpp
cpp/src/: main.cpp
cpp/src/distributions/: normal.cpp
cpp/src/kernel/: benchmark_omp.cpp  monte_carlo_omp.cpp
cpp/tests/: test_normal.cpp
docs/: architecture.md
manuscript/: Makefile  main.tex  references.bib
python/examples/: week1_coin_flip.py  week1_normal_demo.py  week2_battery_ode.py  week2_clt_demo.py  week3_sobol_battery.py  week4_clt_convergence_dp.py  week4_dp_benchmark.py
python/pdsl/: ast_nodes.py  codegen.py  compiler.py  grammar.lark  parser.py
python/src/: __init__.py  battery_model.py  distributions.py  monte_carlo.py  parameter_priors.py  provenance.py  sensitivity.py  state.py
python/tests/: __init__.py  test_battery_model.py  test_distributions.py  test_monte_carlo.py  test_pdsl.py  test_provenance.py  test_sensitivity.py  test_state.py
scripts/: RunAll.sh  RunTests.sh  setup_and_run.sh
